40.0
=======
Stable release.

GNOME Tweaks 40 brings several bug fixes, support for GNOME 40 settings
changes, and removes GNOME Shell Extensions support. Extensions support
can now be found in the GNOME Extensions app.

The stable release includes a fix causing some installations to not detect
GNOME Shell.

Contributors:
  Thanks to mkrajnak for diagnosing a bug in the beta release!

Translations:
  Thank you to all the translators who've contributed to Tweaks!
  
  In chronological order since the last stable release:

  Bruce Cowan, Hannie Dumoleyn, Seong-ho Cho, Baurzhan Muftakhidinov,
  Asier Sarasua Garmendia, Goran Vidović, Fran Dieguez, emintufan,
  Danial Behzadi, Balázs Meskó, Boyuan Yang, Марко М. Костић (Marko M. Kostić),
  Kjartan Maraas, Jordi Mas, Aurimas Černius, Janvitus, Matej Urbančič,
  sicklylife, Fabio Tomat, Marek Černocký, Enrico Nicoletto, Florentina Mușat,
  Juliano de Souza Camargo, Piotr Drąg, Guillaume Bernard, Andika Triwidada,
  Trần Ngọc Quân, Yuri Chornoivan, Daniel Mustieles García, Cheng-Chia Tseng,
  Dingzhong Chen (FeralMeow), Yosef Or Boczko, Jwtiyar Neriman, Daniel Korostil,
  Andre Klapper, Zander Brown, Sabri Ünal, Dušan Kazik, Charles Monzat,
  Umarzuki Mochlis, Tim Sabsch, Yi-Jyun Pan, Ask Hjorth Larsen

40.beta
=======
Beta release.

GNOME Tweaks 40 brings several bug fixes, support for GNOME 40 settings
changes, and removes GNOME Shell Extensions support. Extensions support
can now be found in the GNOME Extensions app.

* Show the back button when leaflet is folded (Çağatay Yiğit Şahin)
* 'Additional Layout Options' sorted alphabetically (Lukáš Kotek)
* Update to new gsettings-desktop-schemas location (Carlos Garnacho)
* Add Flatpak manifest (Jordan Petridis)
* Drop unused extensions support (Florian Müllner)
* Port to libhandy 1.0 (Xi Ruoyao)

* Use Gtk.HeaderBar instead of Handy.HeaderBar. (Evan Welsh)
* Adapt flatpak manifest to new dependencies. (Evan Welsh)
* Fix margins in startup application selector. (Evan Welsh)