@@ -18,6 +18,14 @@
   </p>
   </description>
   <releases>
+    <release version="42.beta" date="2022-03-04">
+      <ul>
+        <li>Fix GNOME Extensions link</li>
+        <li>Clarify legacy GTK theme setting</li>
+        <li>Remove tweaks duplicated in Settings</li>
+        <li>Update translations</li>
+      </ul>
+    </release>
     <release version="40.0" date="2021-03-27">
       <p>
           First stable release for GNOME 40. This version is mainly comprised
