@@ -1,3 +1,15 @@
+42.beta
+=======
+Beta release.
+
+GNOME Tweaks 42 focuses on removing tweaks which are now duplicated by
+Settings. Additionally, Tweaks 42 marks the GTK theme tweak as "Legacy".
+In GNOME 42, the "Legacy Applications" setting will only apply to some
+GTK3 apps and a limited set of GTK4 apps. Most core GNOME apps will
+instead respect the user's dark and light mode preference via libadwaita.
+Users interested in theming can continue to do so using more advanced
+options such as the GTK_THEME environment variable. 
+
 40.0
 =======
 Stable release.
